--- a/src/index.css
+++ b/src/index.css
@@ -56,3 +56,34 @@
 .answer p {
   @apply text-xl mb-5
 }
+
+.slick-dots {
+  @apply absolute top-[-50px] text-right pointer-events-none
+}
+
+.slick-dots li button:before {
+  @apply content-[''] w-[22px] h-[3px] bg-white mx-1 pointer-events-auto
+    
+}
+
+.slick-arrow {
+  @apply  opacity-0 hover:opacity-100 transition-all;
+}
+
+.slick-next, .slick-prev {
+  @apply h-full z-20  
+}
+
+.slick-arrow{
+  @apply h-full flex flex-col justify-center items-center mt-[-2px];
+  svg{
+      @apply h-fit  text-white text-4xl;
+  }
+}
+.slick-next::before, .slick-prev::before{
+  @apply hidden;
+}
+
+.movie__info::before {
+  @apply content-[''] absolute bottom-full left-0 h-[100px] w-full block  bg-gradient-to-t from-[rgba(20,20,20,1)] from-10% via-[rgba(20,20,20,.4)] via-60% to-transparent
+}
